tests/errors/string_58/SETCHAR2.src
.IPPcode21

DEFVAR GF@str
MOVE GF@str string@
SETCHAR GF@str int@0 string@ABC